...
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/videoContainer"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/video_view1"
...
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/baking_next" />
        </LinearLayout>

...
